Created class item for todo list

--- a/index.html
+++ b/index.html
@@ -21,17 +21,12 @@
         </header>
         <div class="todoList">
             <h3>Lista zadań:</h3>
-            <p class="alertInfo">Brak zadań na liście.</p>
-            <div class="item">
+            <p class="alertInfo"></p>
+            <!-- <div class="item">
                 <input type="text" class="item_input" value="Sport">
                 <button class="complete"><i class="fas fa-check"></i></button><button class="edit">EDIT</button><button
                     class="delete"><i class="fas fa-times"></i></button>
-            </div>
-            <div class="item">
-                <input type="text" class="item_input" value="Spacer">
-                <button class="complete"><i class="fas fa-check"></i></button><button class="edit">EDIT</button><button
-                    class="delete"><i class="fas fa-times"></i></button>
-            </div>
+            </div>-->
         </div>
     </div>
     <script src="./js/main.js"></script>
